--- a/po/pt.po
+++ b/po/pt.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-01 07:21+0300\n"
-"PO-Revision-Date: 2008-04-01 19:47+0100\n"
+"PO-Revision-Date: 2008-04-01 21:43+0100\n"
 "Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -909,70 +909,69 @@ msgstr "Falta parentesis de fecho no formato\n"
 #: lib/trigdeferred.l:62
 #, c-format
 msgid "invalid package name `%.250s' in triggers deferred file `%.250s'"
-msgstr ""
+msgstr "nome de pacote inválido `%.250s' no ficheiro `%.250s' de 'triggers' adiados"
 
 #: lib/trigdeferred.l:71
-#, fuzzy, c-format
+#, c-format
 msgid "truncated triggers deferred file `%.250s'"
-msgstr "ficheiro statoverride `%.250s'"
+msgstr "ficheiro de triggers adiados `%.250s' truncado"
 
 #: lib/trigdeferred.l:75
 #, c-format
 msgid "syntax error in triggers deferred file `%.250s' at character `%s'%s"
-msgstr ""
+msgstr "erro de sintaxe no ficheiro de 'triggers' adiados `%.250s' no carácter `%s'%s"
 
 #: lib/trigdeferred.l:112
-#, fuzzy, c-format
+#, c-format
 msgid "unable to open/create triggers lockfile `%.250s'"
-msgstr "não foi possível abrir o ficheiro fonte `%.250s'"
+msgstr "não foi possível abrir/criar o ficheiro de acesso exclusivo `%.250s'"
 
 #: lib/trigdeferred.l:119
-#, fuzzy
 msgid "unable to lock triggers area"
-msgstr "não foi possível libertar %s: %s"
+msgstr "não foi possível obter o acesso exclusivo à área de 'triggers'"
 
 #: lib/trigdeferred.l:130
-#, fuzzy, c-format
+#, c-format
 msgid "unable to stat triggers deferred file `%.250s'"
-msgstr "Não foi possível fazer stat a outro novo ficheiro `%.250s'"
+msgstr "não foi possível fazer stat ao ficheiro de 'triggers' adiados `%.250s'"
 
 #: lib/trigdeferred.l:144
-#, fuzzy, c-format
+#, c-format
 msgid "unable to open triggers deferred file `%.250s'"
-msgstr "não foi possível abrir o ficheiro fonte `%.250s'"
+msgstr "não foi possível abrir o ficheiro de 'triggers' adiados `%.250s'"
 
 #: lib/trigdeferred.l:158
-#, fuzzy, c-format
+#, c-format
 msgid "unable to open/create new triggers deferred file `%.250s'"
-msgstr "não foi possível abrir novo ficheiro depot `%.250s'"
+msgstr "não foi possível abrir/criar novo ficheiro de 'triggers' adiados `%.250s'"
 
 #: lib/trigdeferred.l:178
-#, fuzzy, c-format
+#, c-format
 msgid "error reading triggers deferred file `%.250s'"
-msgstr "erro ao ler %s do ficheiro %.255s"
+msgstr "erro ao ler o ficheiro de 'triggers' adiados `%.250s'"
 
 #: lib/trigdeferred.l:186
-#, fuzzy, c-format
+#, c-format
 msgid "unable to write new triggers deferred file `%.250s'"
-msgstr "não foi possível abrir novo ficheiro depot `%.250s'"
+msgstr "não foi possível escrever o novo ficheiro de 'triggers' adiados `%.250s'"
 
 #: lib/trigdeferred.l:191
-#, fuzzy, c-format
+#, c-format
 msgid "unable to close new triggers deferred file `%.250s'"
-msgstr "não foi possível abrir novo ficheiro depot `%.250s'"
+msgstr "não foi possível fechar o novo ficheiro `%.250s' de 'triggers' adiados"
 
 #: lib/trigdeferred.l:195
-#, fuzzy, c-format
+#, c-format
 msgid "unable to install new triggers deferred file `%.250s'"
-msgstr "não foi possível instalar nova versão de `%.255s'"
+msgstr "não foi possível instalar novo ficheiro de 'triggers' adiados `%.255s'"
 
 #: lib/triglib.c:42
 msgid "empty trigger names are not permitted"
-msgstr ""
+msgstr "não são permitidos 'triggers' com nomes vazios"
 
 #: lib/triglib.c:46
 msgid "trigger name contains invalid character"
-msgstr ""
+msgstr "o nome do 'trigger' contém um carácter inválido"
 
 #: lib/triglib.c:256
 #, c-format
@@ -980,11 +979,12 @@ msgid ""
 "invalid or unknown syntax in trigger name `%.250s' (in trigger interests for "
 "package `%.250s'"
 msgstr ""
+"sintaxe inválida ou desconhecida no nome `%.250s' do 'trigger' (nos interesses do 'trigger' para o pacote `%.250s'"
 
 #: lib/triglib.c:291
-#, fuzzy, c-format
+#, c-format
 msgid "failed to open trigger interest list file `%.250s'"
-msgstr "não foi possível abrir novo ficheiro depot `%.250s'"
+msgstr "falhou a abertura do ficheiro `%.250s' de lista de interesses do 'trigger'"
 
 #: lib/triglib.c:320
 #, fuzzy, c-format
@@ -997,6 +997,7 @@ msgid ""
 "trigger interest file `%.250s' syntax error; illegal package name `%.250s': "
 "%.250s"
 msgstr ""
+"erro de sintaxe do ficheiro de interesse, `%.250s', do 'trigger'; nome `%.250s'ilegal de pacote: %.250s"
 
 #: lib/triglib.c:347
 #, fuzzy, c-format
