Ensure the Files field is last in *.dsc and *.changes
* scripts/Dpkg/Source/Package.pm, scripts/dpkg-genchanges.pl:
Explicitely put Checksums-* fields before the Files field so that
the Files field is last. This is a work-around for some braindead
dsc parsers (dupload and sbuild for instance, see #473518 and

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,9 @@ dpkg (1.14.18) UNRELEASED; urgency=low
   * The dpkg-source option --skip-patches disables application of patches
     during extraction of source packages using Format: 2.0 or Format: 3.0
     (quilt).
+  * Ensure the Files field is last in *.dsc and *.changes. This is a
+    work-around for some braindead dsc parsers (dupload and sbuild for
+    instance, see #473518 and #470440).
 
   [ Updated dselect translations ]
   * German. (Sven Joachim).
