--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-04-02  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/Package.pm, scripts/dpkg-genchanges.pl:
+	Explicitely put Checksums-* fields before the Files field so that
+	the Files field is last. This is a work-around for some braindead
+	dsc parsers (dupload and sbuild for instance, see #473518 and
+	#470440).
+
 2008-04-01  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Source/Package/V2_0.pm: Add the option
