--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-02  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Updated header information.
+
 2008-03-31  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Updated to 288t.
