--- a/dselect/po/de.po
+++ b/dselect/po/de.po
@@ -1,19 +1,17 @@
-# Texte für Debian dpkg/po/de.po
+# Texte für Debian dpkg/dselect/po/de.po
 # Copyright 2000 Software in the Public Interest.
 # Hartmut Koptein <koptein@debian.org>, Apr 2000.
 # Erich Schubert <debian@vitavonni.de>, March 2001.
 # Michael Piefel <piefel@debian.org>, 2001, 2002, 2003, 2004, 2005.
 # Florian Ernst <florian@uni-hd.de>, 2004.
-# Sven Joachim <svenjoac@gmx.de>, 2006, 2007.
-#
-# $Id$
+# Sven Joachim <svenjoac@gmx.de>, 2006, 2007, 2008.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.14.2\n"
+"Project-Id-Version: Debian dpkg 1.14.17\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-30 10:09+0300\n"
-"PO-Revision-Date: 2008-03-31 16:35+0200\n"
+"PO-Revision-Date: 2008-04-02 09:42+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
