--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-02  Sven Joachim  <svenjoac@gmx.de>
+
+	* lib/triglib.c (trk_unknown_interest_change): Fix typo.
+	* dselect/helpmsgs.cc (hlp_displayexplain1): Ditto.
+
 2008-04-02  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Source/Package.pm, scripts/dpkg-genchanges.pl:
