--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,6 +1,8 @@
 2008-04-02  Sven Joachim  <svenjoac@gmx.de>
 
-	* de.po: Updated header information.
+	* dselect.pot: Regenerated.
+	* *.po: Merged with dselect.pot.
+	* de.po, fr.po: Updated header information.
 
 2008-03-31  Sven Joachim  <svenjoac@gmx.de>
 
