--- a/dselect/po/zh_TW.po
+++ b/dselect/po/zh_TW.po
@@ -547,7 +547,7 @@ msgid ""
 "                       `-'     - not installed but config files remain;\n"
 "   packages in these { `U'     - unpacked but not yet configured;\n"
 "   states are not    { `C'     - half-configured (an error happened);\n"
-"   (quite) properly  { `I'     - half-installed (an error happened).\n"
+"   (quite) properly  { `I'     - half-installed (an error happened);\n"
 "   installed         { `W',`t' - triggers are awaited resp. pending.\n"
 " Old mark: what was requested for this package before presenting this list;\n"
 " Mark: what is requested for this package:\n"
