--- a/po/ku.po
+++ b/po/ku.po
@@ -957,7 +957,7 @@ msgstr ""
 #, c-format
 msgid ""
 "invalid or unknown syntax in trigger name `%.250s' (in trigger interests for "
-"package `%.250s'"
+"package `%.250s')"
 msgstr ""
 
 #: lib/triglib.c:291
