--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -974,7 +974,7 @@ msgstr "触发器名包含无效字符"
 #, c-format
 msgid ""
 "invalid or unknown syntax in trigger name `%.250s' (in trigger interests for "
-"package `%.250s'"
+"package `%.250s')"
 msgstr "触发器名“%.250s”包含无效或者位置的语法(在软件包“%.250s”的触发器兴趣中)"
 
 #: lib/triglib.c:291
