Updated Swedish translation.
Also fixed English text of dpkg-source.1.

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,17 +22,21 @@ dpkg (1.14.18) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * German. (Sven Joachim).
+  * Swedish (Peter Karlsson).
 
   [ Updated dpkg translations ]
   * Simplified Chinese (Deng Xiyue). Closes: #473523
+  * Swedish (Peter Karlsson).
   * Portuguese (Miguel Figueiredo).
   * Vietnamese (Clytie Siddall). Closes: #473726
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
+  * Swedish (Peter Karlsson).
 
    [ Updated scripts translations ]
   * German (Helge Kreutzmann).
+  * Swedish (Peter Karlsson).
  
  -- Guillem Jover <guillem@debian.org>  Sun, 30 Mar 2008 13:04:29 +0300
 
