--- a/dselect/po/sv.po
+++ b/dselect/po/sv.po
@@ -8,12 +8,12 @@ msgstr ""
 "Project-Id-Version: dselect\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-30 10:09+0300\n"
-"PO-Revision-Date: 2007-07-29 11:58-0100\n"
+"PO-Revision-Date: 2008-04-03 13:18+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: dselect/basecmds.cc:121
 msgid "Search for ? "
@@ -286,9 +286,8 @@ msgid "Revert to directly requested state for all packages"
 msgstr "Återgå till direkt föreslagna tillstånd för alla paket"
 
 #: dselect/bindings.cc:161
-#, fuzzy
 msgid "Revert to currently installed state for all packages"
-msgstr "Återgå till direkt föreslagna tillstånd för alla paket"
+msgstr "Återgå till nuvarande installerat tillstånd för alla paket"
 
 #: dselect/bindings.cc:164
 msgid "Select currently-highlighted access method"
@@ -537,7 +536,6 @@ msgid "Display, part 1: package listing and status chars"
 msgstr "Visning, del 1: paketlistning och statussymboler"
 
 #: dselect/helpmsgs.cc:121
-#, fuzzy
 msgid ""
 "The top half of the screen shows a list of packages.  For each package you "
 "see\n"
@@ -580,12 +578,13 @@ msgstr ""
 "nedan)\n"
 "             \"R\"       - allvarligt fel vid installation, måste "
 "ominstalleras\n"
-" Tillstånd: blanksteg  - ej installerat\n"
-"                \"*\"    - installerat\n"
-"                \"-\"    - ej installerat, men konfigurationsfiler kvarstår\n"
-" paket i dessa { \"U\"   - uppackat, men ännu ej konfigurerat\n"
-"     tillstånd { \"C\"   - halvt konfigurerat (ett fel uppstod)\n"
-"    är trasiga { \"I\"   - halvt installerat (ett fel uppstod)\n"
+" Tillstånd:       blanksteg    - ej installerat\n"
+"                       `*'     - installerat\n"
+"                       `-'     - ej installerat, konfigurationsfiler kvarstår\n"
+"   paket i dessa     { `U'     - uppackat, men ännu ej konfigurerat\n"
+"   tillstånd är inte { `C'     - halvt konfigurerat (ett fel uppstod)\n"
+"   (helt) korrekt    { `I'     - halvt installerat (ett fel uppstod)\n"
+"   installerade      { `W',`t' - utlösare väntar resp. förestående\n"
 " Gammal markering: vad som önskades innan listan visades\n"
 " Markering: vad önskas för detta paket:\n"
 "  \"*\": markerat för att installeras eller uppgraderas\n"
@@ -1330,11 +1329,11 @@ msgstr "misslyckad konfig."
 
 #: dselect/pkgdisplay.cc:57
 msgid "awaiting trigger processing"
-msgstr ""
+msgstr "väntar på hantering av utlösare"
 
 #: dselect/pkgdisplay.cc:58
 msgid "triggered"
-msgstr ""
+msgstr "utlöst"
 
 #: dselect/pkgdisplay.cc:59
 msgid "installed"
@@ -1393,9 +1392,8 @@ msgid "pre-depends on"
 msgstr "beror i förväg på"
 
 #: dselect/pkgdisplay.cc:77
-#, fuzzy
 msgid "breaks"
-msgstr "förstörs med"
+msgstr "förstör"
 
 #: dselect/pkgdisplay.cc:78
 msgid "conflicts with"
