--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-26  Peter Karlsson  <peterk@debian.org>
+
+	* dpkg-source.1: Corrected English.
+	* po/sv.po: Updated to 1555t.
+
 2008-04-01  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1484t1f69u.
