--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-03  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 288t.
+
 2008-04-02  Sven Joachim  <svenjoac@gmx.de>
 
 	* dselect.pot: Regenerated.
