--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-03  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 984t.
+
 2008-04-02  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 951t
