Vietnamese translation completed

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -13,7 +13,7 @@
 
 2008-04-01  Clytie Siddall  <clytie@riverland.net.au>
 
-	* vi.po: Updated to 983t1f
+	* vi.po: Updated to 984t
 
 2008-04-01  Miguel Figueiredo  <elmig@debianpt.org>
 
