--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-03  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 386t0f81u.
+
 2008-04-03  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 467t.
