dpkg-shlibdeps: initialize dependencies differently
* scripts/Dpkg/Shlibs/SymbolFile.pm (get_smallest_version): New
function to retrieve the smallest "minver" of all symbols of a
given library.
* scripts/dpkg-shlibdeps.pl: Do not initialize dependencies of
libraries with symbols files as unversioned, instead use the
smallest minimal version returned by the function above. This
is required because the library might not have always been
available in the package and the unversioned dependency thus
doesn't ensure his presence.

* scripts/t/800_Dpkg_IPC.t: Remove temporary files used by the
tests.

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,11 @@ dpkg (1.14.18) UNRELEASED; urgency=low
   * Ensure the Files field is last in *.dsc and *.changes. This is a
     work-around for some braindead dsc parsers (dupload and sbuild for
     instance, see #473518 and #470440).
+  * Initialize dependencies for libraries having symbols files with the
+    smallest minimal version listed in the symbols file instead of using
+    an unversioned dependency. It's the only way to ensure the library
+    presence if it wasn't available in all versions of the package that ever
+    existed. Closes: #474079
 
   [ Updated dselect translations ]
   * German. (Sven Joachim).
