dpkg-source: don't use diff -p for Format: 1.0
* scripts/Dpkg/Source/Package/V1_0.pm: Do not use
diff -p to generate patches as dpkg-source of sarge doesn't accept
data after the @@.

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ dpkg (1.14.18) UNRELEASED; urgency=low
     an unversioned dependency. It's the only way to ensure the library
     presence if it wasn't available in all versions of the package that ever
     existed. Closes: #474079
+  * Don't use the -p option of diff for Format: 1.0 source packages.
+    dpkg-source of sarge doesn't accept data after @@.
 
   [ Updated dselect translations ]
   * German. (Sven Joachim).
