--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-05  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/Package/V1_0.pm: Do not use
+	diff -p to generate patches as dpkg-source of sarge doesn't accept
+	data after the @@.
+
 2008-04-04  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Shlibs/SymbolFile.pm (get_smallest_version): New
