man: Sort package states

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-08  Guillem Jover  <guillem@debian.org>
+
+	* dpkg.1: Sort package states.
+
 2008-04-07  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1494t1f59u.
