Continue update of German man page translation

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-07  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1494t1f59u.
+
 2008-02-26  Peter Karlsson  <peterk@debian.org>
 
 	* dpkg-source.1: Corrected English.
