Fix or mark as fuzzy erroneous strings in Swedish translations

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-03-30 09:58+0300\n"
-"PO-Revision-Date: 2008-04-03 13:24+0100\n"
+"PO-Revision-Date: 2008-04-08 06:39+0300\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -8783,7 +8783,7 @@ msgstr ""
 #: ../../man/dpkg-source.1:44
 #, no-wrap
 msgid "B<-b> I<directory> [I<format-specific-parameters>]"
-msgstr "B<-b> I<katalog> [I<formatspecifika-flaggor]"
+msgstr "B<-b> I<katalog> [I<formatspecifika-flaggor>]"
 
 # type: Plain text
 #: ../../man/dpkg-source.1:51
