--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-08  Guillem Jover  <guillem@debian.org>
+
+	* sv.po: Mark two non-matching strings as fuzzy.
+
 2008-04-03  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 984t.
