Add trigger man pages and update dpkg with triggers information

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dpkg (1.14.18) UNRELEASED; urgency=low
   * Bump po4a version in Build-Depends to 0.33.1-1, as usage of UTF-8
     in original man pages was causing build failures. Closes: #473498
   * Add triggers documentation to dpkg-dev. Closes: #473449
+  * Add deb-triggers.5 and dpkg-trigger.1 man pages, and document new
+    statuses and options in dpkg.1.
 
   [ Raphael Hertzog ]
   * When dpkg-source builds a source package of Format: 2.0 or 3.0 (quilt) it
