--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-08  Guillem Jover  <guillem@debian.org>
+
+	* doc/triggers.txt: Move parts of the document into proper man pages.
+	Add references to those.
+
 2008-04-05  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Source/Package/V1_0.pm: Do not use
