doc: Fix wrong dpkg trigger related option names

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-04-08  Guillem Jover  <guillem@debian.org>
 
+	* doc/triggers.txt: Fix wrong dpkg trigger related option names.
+
+2008-04-08  Guillem Jover  <guillem@debian.org>
+
 	* doc/triggers.txt: Move parts of the document into proper man pages.
 	Add references to those.
 
