--- a/ChangeLog
+++ b/ChangeLog
@@ -56,9 +56,9 @@
 	(prepare_build): apply patches before trying to build a source package
 	when it's clear that they have not been applied because
 	debian/patches/.dpkg-source-applied doesn't exist.
-	* scripts/Dpkg/Source/Package/V3_0/quilt.pm: Likewise. If a .pc directory
-	is present, then use "quilt unapplied" to check if all patches have been
-	applied.
+	* scripts/Dpkg/Source/Package/V3_0/quilt.pm: Likewise. If a .pc
+	directory is present, then use "quilt unapplied" to check if all
+	patches have been applied.
 	* man/dpkg-source.1: Document the above changes.
 
 2008-04-01  Raphael Hertzog  <hertzog@debian.org>
@@ -81,7 +81,7 @@
 
 2008-03-30  Guillem Jover  <guillem@debian.org>
 
-	* configure.ac: Release 1.14.18.
+	* configure.ac: Release 1.14.17.
 
 2008-03-30  Guillem Jover  <guillem@debian.org>
 
