--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.18) UNRELEASED; urgency=low
+dpkg (1.14.18) unstable; urgency=low
 
   [ Guillem Jover ]
   * Bump po4a version in Build-Depends to 0.33.1-1, as usage of UTF-8
@@ -47,7 +47,7 @@ dpkg (1.14.18) UNRELEASED; urgency=low
   * German (Helge Kreutzmann).
   * Swedish (Peter Karlsson).
 
- -- Guillem Jover <guillem@debian.org>  Sun, 30 Mar 2008 13:04:29 +0300
+ -- Guillem Jover <guillem@debian.org>  Tue, 08 Apr 2008 07:00:10 +0300
 
 dpkg (1.14.17) experimental; urgency=low
 
