--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-04-08  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.14.19~.
+
+2008-04-08  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.14.18.
 
 2008-04-08  Guillem Jover  <guillem@debian.org>
