--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.19) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Tue, 08 Apr 2008 07:20:49 +0300
+
 dpkg (1.14.18) unstable; urgency=low
 
   [ Guillem Jover ]
